--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "QM-Game",
-    "slug": "qm-game",
+    "slug": "qm-game-zal6vmjgjrxkr3mddmgt9",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
