--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.21",
@@ -30,7 +31,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-updates": "~0.25.21",
     "expo-web-browser": "~13.0.3",
-    "nativewind": "4.0.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
@@ -39,8 +40,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.7"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -51,6 +51,7 @@
     "jest-expo": "~51.0.3",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   }
 }
